fix(footer):safari bug fix, margin-bottom at bottom of the page doesn't work on safari

--- a/styles/index.less
+++ b/styles/index.less
@@ -50,9 +50,21 @@ html, body {
 	font-family: @main-font;
 }
 
-body.disable-scroll {
-	overflow: hidden;
-	max-height: 100vh;
+body {
+    &.disable-scroll {
+        overflow: hidden;
+        max-height: 100vh;
+    }
+
+    // now as after element as fix for safari
+    // safari ignores margin-bottom at the bottom of the page
+    &.footer-fixed::after {
+        content: '';
+        position: relative;
+        display: block;
+        width: 100%;
+        height: 100vh;
+    }
 }
 
 * {
